@@ -1,3 +1,7 @@
+2016-09-19  Richard Biener  <rguenther@suse.de>
+
+	* lto.c (lto_main): Invoke early_finish debug hook.
+
 2016-07-25  Richard Biener  <rguenther@suse.de>
 
 	* lto.c (compare_tree_sccs_1): Remove streamer_handle_as_builtin_p uses.
